# ia-portfolio

./: README.md
data-sources/: .gitignore  pyproject.toml
data-sources/src/google_reviews/: README.md  __init__.py  cli.py
data-sources/src/google_reviews/parsing/: parser_reviews.py
data-sources/src/google_reviews/scraping/: scraper_reviews.py
data-sources/tests/google_reviews/: test_cli.py
notebooks/: README.md
notebooks/statistics/: README.md
notebooks/statistics/studies/: README.md
notebooks/statistics/studies/fake-review-detector/: TODO.md
notebooks/statistics/studies/fake-review-detector/data/: dirty-data-google-comments.txt  dirty-data-google-reviews.txt
notebooks/statistics/studies/fake-review-detector/models/: comment.py
notebooks/statistics/studies/fake-review-detector/src/: main.py  setup_env_and_install_selenium_and_webdriver-manager.bat
projects/: README.md
projects/nlp_classification/: README.md
projects/nlp_classification/google-reviews-nlp/: README.md  requirements.txt
projects/nlp_classification/google-reviews-nlp/data/processed/: data-google-reviews-clean.csv  reviews_labeled.csv
projects/nlp_classification/google-reviews-nlp/data/raw/: data-google-reviews.csv
projects/nlp_classification/google-reviews-nlp/docs/: TODO.md
projects/nlp_classification/google-reviews-nlp/notebooks/: 01_eda.ipynb
projects/nlp_classification/google-reviews-nlp/src/data/: heuristics_labeling.py  preprocess.py
projects/nlp_classification/google-reviews-nlp/src/models/: classifier_tf.py
scripts/: setup_selenium.py
(+6 files in other folders)
